# integrations

./: .env  Cargo.toml
datadir-providers/local/tests/: scenario_tests.rs
plugins/clock/tests/: scenario_tests.rs
plugins/linux-host-audio/src/: capture.rs  speaker.rs
plugins/linux-host-audio/tests/: scenario_tests.rs
plugins/mcp/: Cargo.toml  README.md
plugins/mcp/src/: lib.rs
plugins/mcp/tests/: config.json  mcp_test.rs  scenario_tests.rs
plugins/mumble/tests/: scenario_tests.rs
plugins/stt-elevenlabs/tests/: scenario_tests.rs
plugins/stt-google/tests/: scenario_tests.rs
plugins/stt-speechmatics/tests/: scenario_tests.rs
plugins/tts-elevenlabs/src/: lib.rs
plugins/tts-elevenlabs/tests/: config.json  scenario_tests.rs
plugins/tts-google/src/: lib.rs
plugins/tts-google/tests/: config.json  scenario_tests.rs
prompt-providers/file/src/: lib.rs
prompt-providers/file/tests/: scenario_tests.rs
storage-providers/firestore/tests/: scenario_tests.rs
