[package]
name = "synapto-plugin-mcp"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
synapto-interface.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
synapto-test.workspace = true
synapto.workspace = true
